# microbeFunction_mcp

./: .gitignore  LICENSE  README.md  default.conf.toml  pyproject.toml
data/mgnify/: human-gut_v2.0_species_index.jsonl  release_manifest.json
deploy/: config.py  web.py
tests/: test_mgnify_index_smoke.py  test_mgnify_mcp.py
tools/kegg/: __main__.py  allowlist_sources.py  build_prok_allowlists.py  cli.py  cog_store.py  deploy.py  discover_gut_reference_orgs.py  kegg_api.py  ko_input.py  module_completeness.py  saturate_gut_panel.py  server.py
tools/kegg/data/: COG.csv  br08601_raw.keg  domain_panels_v2.0.json  kegg_module_allowlist_archaea_v2.0.tsv  kegg_module_allowlist_bacteria_v2.0.tsv  kegg_organisms_taxonomy.json  prokaryote_allowlist_split_meta_v2.0.json  prokaryote_ko_pathway_allowlist_archaea_v2.0.tsv  prokaryote_ko_pathway_allowlist_archaea_v2.0.txt  prokaryote_ko_pathway_allowlist_bacteria_v2.0.tsv  prokaryote_ko_pathway_allowlist_bacteria_v2.0.txt
tools/mgnify/: README.md  __init__.py  __main__.py  build_mgnify_index.py  cli.py  deploy.py  download_human_gut_metadata.py  download_species_annotations.py  fetch.py  index_store.py  list_mgnify_folders.py  server.py
